--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
-  },
+        "target": "ES2020",
+        "module": "nodenext",
+        "moduleResolution":"nodenext",
+        "outDir": "./dist",
+        "rootDir": "./",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "allowSyntheticDefaultImports": true,
+    },
     "include": [
         "./**/*.ts"
     ],
